# Huskdroid

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/android/: adb.rs  filesystem.rs  image.rs  image_manager.rs  mod.rs  root.rs  snapshot.rs  tests.rs
src-tauri/src/commands/: apk.rs  deps.rs  devices.rs  fs.rs  images.rs  mod.rs  runtime.rs  settings.rs  snapshots.rs
src-tauri/src/devices/: config.rs  manager.rs  mod.rs  tests.rs
src-tauri/src/engine/: backend.rs  mod.rs  runtime.rs  virtualization.rs
src-tauri/src/storage/: mod.rs
src/lib/api/: apk.ts  deps.ts  devices.ts  fs.ts  images.ts  runtime.ts  settings.ts  snapshots.ts
src/lib/components/: AdbConsole.svelte  ApkManager.svelte  ConfirmDialog.svelte  CreateDeviceDialog.svelte  DeviceCard.svelte  DeviceDetail.svelte  DeviceList.svelte  FilesystemBrowser.svelte  ImageManager.svelte  ImageRepo.svelte  SettingsPanel.svelte  SnapshotPanel.svelte
src/lib/stores/: deviceStatus.ts
src/routes/: +layout.svelte  +page.svelte
